--- a/index.html
+++ b/index.html
@@ -30,50 +30,57 @@
 						<a href="#">Contact</a>
 					</li>
 					<li>
-						<a href="#">Accès pro</a>
+						<a class="user-link" href="#">Connexion</a>
 					</li>
 				</ul>
-				<a class="button" href="#">Connexion</a>
 			</div>
-						<div id="sub-header">
+			<div id="sub-header">
 				<ul>
 					<li class="music">
 						<a href="#">
+							<i class="icon music"></i>
 							Musique
 						</a>
 					</li>
 					<li class="tv-radio-web">
 						<a href="#">
+							<i class="icon tv-radio-web"></i>
 							Tv/Radio/Web
 						</a>
 					</li>
 					<li class="dance">
 						<a href="#">
+							<i class="icon dance"></i>
 							Danse
 						</a>
 					</li>
 					<li class="fashion-photo">
 						<a href="#">
+							<i class="icon fashion-photo"></i>
 							Mode/Photo
 						</a>
 					</li>
 					<li class="cinema">
 						<a href="#">
+							<i class="icon cinema"></i>
 							Cinéma
 						</a>
 					</li>
 					<li class="theater">
 						<a href="#">
+							<i class="icon theater"></i>
 							Théâtre
 						</a>
 					</li>
 					<li class="child">
 						<a href="#">
+							<i class="icon child"></i>
 							Enfant
 						</a>
 					</li>
 					<li class="others">
 						<a href="#">
+							<i class="icon others"></i>
 							Divers
 						</a>
 					</li>
