--- a/index.html
+++ b/index.html
@@ -38,50 +38,42 @@
 				<ul>
 					<li class="music">
 						<a href="#">
-							<i class="icon music"></i>
-							Musique
+							<i class="icon music"></i>Musique
 						</a>
 					</li>
 					<li class="tv-radio-web">
 						<a href="#">
-							<i class="icon tv-radio-web"></i>
-							Tv/Radio/Web
+							<i class="icon tv-radio-web"></i>Tv/Radio/Web
 						</a>
 					</li>
 					<li class="dance">
 						<a href="#">
-							<i class="icon dance"></i>
-							Danse
+							<i class="icon dance"></i>Danse
 						</a>
 					</li>
 					<li class="fashion-photo">
 						<a href="#">
-							<i class="icon fashion-photo"></i>
-							Mode/Photo
+							<i class="icon fashion-photo"></i>Mode/Photo
 						</a>
 					</li>
 					<li class="cinema">
 						<a href="#">
-							<i class="icon cinema"></i>
-							Cinéma
+							<i class="icon cinema"></i>Cinéma
 						</a>
 					</li>
 					<li class="theater">
 						<a href="#">
-							<i class="icon theater"></i>
-							Théâtre
+							<i class="icon theater"></i>Théâtre
 						</a>
 					</li>
 					<li class="child">
 						<a href="#">
-							<i class="icon child"></i>
-							Enfant
+							<i class="icon child"></i>Enfant
 						</a>
 					</li>
 					<li class="others">
 						<a href="#">
-							<i class="icon others"></i>
-							Divers
+							<i class="icon others"></i>Divers
 						</a>
 					</li>
 				</ul>
