--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<body>
 		<header>
 			<div id="main-header">
-				<a class="logo" href="#">
-					<img src="logo.png" alt="">
+				<a class="logo" href="index.html">
+					<img src="logo.png" alt="logo_MegaCastings">
 				</a>
 				<ul>
 					<li>
@@ -30,7 +30,10 @@
 						<a href="#">Contact</a>
 					</li>
 					<li>
-						<a class="user-link" href="#">Connexion</a>
+						<a class="user-link" href="connection.html">Inscription</a>
+					</li>
+					<li>
+						<a class="user-link" href="registration.html">Connexion</a>
 					</li>
 				</ul>
 			</div>
